@@ -1,5 +1,4 @@
 Package: goprobe
-Version: {{VERSION}}
 Section: base
 Priority: optional
 Architecture: amd64
